# bevy-basics

./: Cargo.toml
episode-1/: Cargo.toml
episode-2/: Cargo.toml
episode-2/src/: camera.rs  main.rs  movement.rs  spaceship.rs
episode-3/: Cargo.toml
episode-3/src/: asset_loader.rs  asteroids.rs  collision_detection.rs  debug.rs  despawn.rs  main.rs  movement.rs  spaceship.rs
episode-4/: Cargo.toml
episode-4/assets/: Asteroid.glb
episode-4/src/: collision_detection.rs  debug.rs  main.rs  movement.rs  spaceship.rs
episode-5/: Cargo.toml
episode-5/assets/: Missiles.glb
episode-5/src/: asteroids.rs  camera.rs  collision_detection.rs  despawn.rs  health.rs  light.rs  main.rs  schedule.rs  spaceship.rs  state.rs
episode-one/: Cargo.toml
